[package]
name = "rust-ui"
version = "0.0.0"
authors = ["Shota Nozaki <emonkak@gmail.com>"]
edition = "2018"
resolver = "2"

[features]
default = ["xlib"]
xlib = []

[dependencies]
bytemuck = { version = "1.7", features = ["derive"] }
env_logger = "0.9"
futures = "0.3"
glam = "0.17"
glyph_brush = "0.7"
log = "0.4"
mio = { version = "0.7", features = ["os-ext"] }
raw-window-handle = "0.3"
servo-fontconfig = "0.5"
wgpu = "0.10"
wgpu_glyph = "0.14"
x11 = { version = "2.18", features = ["xft", "xinerama", "xlib"] }

[[bin]]
name = "main"
path = "src/main.rs"
