[package]
name = "yuiui-experiment"
version = "0.0.0"
authors = ["Shota Nozaki <emonkak@gmail.com>"]
license = "MIT"
description = ""
readme = "README.md"
homepage = "https://github.com/emonkak/yuiui"
edition = "2021"
resolver = "2"

[dependencies]
either = { path = "../either" }
either-macro = { path = "../either-macro" }

[[bin]]
name = "main-experiment"
path = "src/main.rs"
