[package]
name = "yuiui-gtk"
version = "0.0.0"
authors = ["Shota Nozaki <emonkak@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
either = { path = "../either" }
either-macro = { path = "../either-macro" }
futures = "0.3"
gtk = { package = "gtk4", version = "0.4" }
hlist = { path = "../hlist" }
slot_vec = { path = "../slot_vec" }
yuiui = { path = "../yuiui" }
yuiui-gtk-derive = { path = "../yuiui-gtk-derive" }

[[example]]
name = "counter"
