[package]
name = "yuiui-gtk"
version = "0.0.0"
authors = ["Shota Nozaki <emonkak@gmail.com>"]
edition = "2021"
resolver = "2"

[dependencies]
futures = "0.3"
gtk = { package = "gtk4", version = "0.4" }
yuiui-core = { path = "../yuiui-core" }
yuiui-gtk-derive = { path = "../yuiui-gtk-derive" }

[[example]]
name = "counter"

[[example]]
name = "todo"
