[package]
name = "yuiui"
version = "0.0.0"
authors = ["Shota Nozaki <emonkak@gmail.com>"]
license = "MIT"
description = ""
readme = "README.md"
homepage = "https://github.com/emonkak/yuiui"
edition = "2021"
resolver = "2"

[dependencies]
bit_flags = { path = "../bit_flags" }
either = "1"
futures = "0.3"
hlist = { path = "../hlist" }
